<resources>
    <string name="app_name">Color Speed</string>
    <string name="extension_name">Color Speed</string>
    <string name="extension_description">Color coded speed based on ride average</string>
    <string name="speed_title">Speed vs. Ride Average</string>
    <string name="speed_title_short">Speed</string>
    <string name="avg_speed_title">Speed vs. Lap</string>
    <string name="avg_speed_title_short">Speed vs. Lap</string>
    <string name="avg_speed_description">Current speed vs. last lap average</string>
    <string name="lap_speed_title">Current vs. last lap</string>
    <string name="lap_speed_title_short">vs. LL</string>
    <string name="lap_speed_description">Current lap speed vs. last lap average</string>
    <string name="speed_vs_target_title">vs. target</string>
    <string name="speed_vs_target_title_short">vs. target</string>
    <string name="speed_vs_target_description">Current speed vs. target speed</string>
    <string name="lap_vs_target_title">Lap vs. target</string>
    <string name="lap_vs_target_title_short">Lap vs. tar</string>
    <string name="lap_vs_target_description">Current lap speed vs. target speed</string>
    <!-- MainScreen Descriptions -->
    <string name="color_speed_settings_title">Color Speed Settings</string>
    <string name="color_speed_settings_description">Enter the percentage of either average or target speed for this level and color</string>
    <string name="stopped_speed">Stopped Speed</string>
    <string name="target_speed">Target Speed</string>
    <string name="enter_valid_number">Please enter a valid number</string>
    <string name="well_below_target">Well below target</string>
    <string name="below_target">Below target</string>
    <string name="at_target">At target</string>
    <string name="target_low">"Target low"</string>
    <string name="target_high">"Target high"</string>
    <string name="above_target">Above target</string>
    <string name="well_above_target">Well above target</string>
    <string name="enter_number_below_next_highest_level">"Please enter a valid number below the next highest level"</string>
    <string name="display_errors">"Display arrows next to the speed values?"</string>
    <string name="background_colors">"Change background colors based on speed?"</string>
    <string name="save">Save</string>








</resources>