<?xml version="1.0" encoding="utf-8"?>
<ExtensionInfo
    displayName="@string/extension_name"
    icon="@drawable/icon_gauge"
    id="karoocolorspeed"
    scansDevices="false">
    <DataType
        typeId="currentcolorspeed"
        description="@string/extension_description"
        displayName="@string/speed_title"
        graphical="true"
        icon="@drawable/icon_gauge" />
    <DataType
        typeId="lapscolorspeed"
        description="@string/lap_speed_description"
        displayName="@string/lap_speed_title"
        graphical="true"
        icon="@drawable/icon_gauge" />
    <DataType
        typeId="avgcolorspeed"
        description="@string/avg_speed_description"
        displayName="@string/avg_speed_title"
        graphical="true"
        icon="@drawable/icon_gauge" />
    <DataType
        typeId="speedvstarget"
        description="@string/speed_vs_target_description"
        displayName="@string/speed_vs_target_title"
        graphical="true"
        icon="@drawable/icon_gauge" />
    <DataType
        typeId="lapvstarget"
        description="@string/lap_vs_target_description"
        displayName="@string/lap_vs_target_title"
        graphical="true"
        icon="@drawable/icon_gauge" />
</ExtensionInfo>
